# lector-cpmd

./: .gitignore  Atomo.cpp  Atomo.h  CMakeLists.txt  angulos  angulos.cpp  angulos2  gdr  gdr.cpp  main  main.cpp  mytests.cpp
tests/: CMakeLists.txt  test_calculaPosicionesPeriodicas.cpp  test_main.cpp
tests/tests/: CMakeCache.txt  Makefile  cmake_install.cmake
utils/: CMakeLists.txt  utils.cpp  utils.h
